2008-08-03  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/flac/gstflacenc.c: (gst_flac_enc_query_peer_total_samples),
	(gst_flac_enc_sink_setcaps), (gst_flac_enc_write_callback):
	Set an estimate for the total number of samples that will be encoded
	if possible to help decoders if the streaminfo can't be rewritten
	later (like when muxing into Ogg containers).

	Add a warning if we get header packets after data packets as those
	will get lost when muxing into Ogg, i.e. rewriting the headers doesn't
	work.

2008-08-03  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/flac/gstflacdec.c: (gst_flac_dec_metadata_callback),
	(gst_flac_dec_write):
	Support decoding of all depths between 4 and 32 bits and read the
	depth from the streaminfo header if needed. Also support all sampling
	rates between 1 and 655350 Hz.

	* ext/flac/gstflacenc.c:
	(gst_flac_enc_caps_append_structure_with_widths),
	(gst_flac_enc_sink_getcaps), (gst_flac_enc_sink_setcaps),
	(gst_flac_enc_chain):
	* ext/flac/gstflacenc.h:
	Support encoding in all bit depths supported by the streamable
	subformat (i.e. 8, 12, 16, 20 and 24 bits) and all sampling rates
	between 1 Hz and 655350 Hz.

2008-08-03  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/flac/gstflacenc.c: (gst_flac_enc_init),
	(gst_flac_enc_sink_getcaps):
	Support encoding of up to 8 channels.

2008-08-02  Jan Schmidt  <jan.schmidt@sun.com>

	* ext/soup/gstsouphttpsrc.c:
	* ext/soup/gstsouphttpsrc.h:
	Fix seeking race condition in #540300
	Patch By: Wouter Cloetens  <wouter at mind be>

2008-08-02  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/matroska/matroska-demux.c: (gst_matroskademux_do_index_seek),
	(gst_matroska_demux_element_send_event),
	(gst_matroska_demux_handle_seek_event),
	(gst_matroska_demux_handle_src_event):
	When receiving a SEEK event on a specific pad first search for a seek
	table entry for the stream of the pad and then fall back to an entry
	for a different stream.
